instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:5: error: ';' expected but ')' found.
forward)() 
       ^