instructions.InstructionsDrawG.scala.code
Turn left()
forward()
turn left()
forward()
forward)()